update project structure and add new features
- Update .gitignore to include 'dist' directory
- Add VSCode settings for Python analysis
- Initialize package-lock.json for dependency management
- Integrate Tailwind CSS into styles
- Update tweet API endpoint for creating tweets
- Modify frontend package.json to include debug script
- Refactor ProfilePage to use 'is_liked' instead of 'isLiked'
- Update Docker configuration for user service port
- Add ErrorState component for handling errors
- Implement loading spinner in index.js
- Update Tweet component to reflect changes in tweet properties
- Adjust backend tweet service routes and add strict slashes handling
- Update Nginx configuration for API proxying
- Add LandingPage component for user onboarding

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -11,7 +11,9 @@ server {
 
     # Proxy requests to user service
     location /api/users/ {
-        proxy_pass http://user-service:5000/;
+        # Remove /api/users/ prefix when proxying
+        rewrite ^/api/users/(.*) /users/$1 break;
+        proxy_pass http://user-service:5004;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -21,7 +23,8 @@ server {
 
     # Proxy requests to tweet service
     location /api/tweets/ {
-        proxy_pass http://tweet-service:5001/;
+        rewrite ^/api/tweets/(.*) /tweets/$1 break;
+        proxy_pass http://tweet-service:5001;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -31,7 +34,8 @@ server {
 
     # Proxy requests to notification service
     location /api/notifications/ {
-        proxy_pass http://notification-service:5002/;
+        rewrite ^/api/notifications/(.*) /notifications/$1 break;
+        proxy_pass http://notification-service:5002;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -41,7 +45,8 @@ server {
 
     # Proxy requests to search service
     location /api/search/ {
-        proxy_pass http://search-service:5003/;
+        rewrite ^/api/search/(.*) /search/$1 break;
+        proxy_pass http://search-service:5003;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
