--- a/backend/tweet_service/requirements.txt
+++ b/backend/tweet_service/requirements.txt
@@ -3,3 +3,5 @@ Flask-SQLAlchemy==3.1.1
 Flask-JWT-Extended==4.6.0
 psycopg2-binary==2.9.9
 python-dotenv==1.0.1
+Flask-Limiter==3.5.0
+Flask-Talisman==0.7.0
