--- a/backend/user_profile/requirements.txt
+++ b/backend/user_profile/requirements.txt
@@ -1,7 +1,11 @@
 Flask==3.0.2
 Flask-SQLAlchemy==3.1.1
-Flask-Migrate==4.0.5
 Flask-JWT-Extended==4.6.0
 psycopg2-binary==2.9.9
 python-dotenv==1.0.1
-Werkzeug==3.0.1
+circuitbreaker==1.4.0
+redis==5.0.1
+Flask-Caching==2.1.0
+flask_migrate==4.0.7
+Flask-Limiter==3.5.0
+Flask-Talisman==0.7.0
