--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -3,6 +3,9 @@ events {
 }
 
 http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
     upstream user_service {
         server user-service:5004;
     }
@@ -18,41 +21,48 @@ http {
     upstream search_service {
         server search-service:5003;
     }
-    add_header X-Frame-Options "SAMEORIGIN";
-    add_header X-XSS-Protection "1; mode=block";
-    add_header X-Content-Type-Options "nosniff";
-    add_header Content-Security-Policy "default-src 'self'";
-    add_header Referrer-Policy "strict-origin-when-cross-origin";
-
-    # SSL configuration
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256;
-
-    # Rate limiting
-    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
 
     server {
         listen 80;
-        server_name api.chirper.local;
+        
+        # Global CORS configuration
+        add_header 'Access-Control-Allow-Origin' 'http://127.0.0.1:3000' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-CSRF-TOKEN' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
 
-        # CORS configuration
-        add_header 'Access-Control-Allow-Origin' '*';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
-        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type';
-
-        # Rate limiting
-        limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
-        limit_req zone=api_limit burst=20 nodelay;
+        # Preflight requests
+        location /api/ {
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' 'http://127.0.0.1:3000' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-CSRF-TOKEN' always;
+                add_header 'Access-Control-Allow-Credentials' 'true' always;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            return 404;
+        }
 
         # Health check endpoint
         location /health {
+            access_log off;
             return 200 'OK';
             add_header Content-Type text/plain;
         }
 
         # User service routes
         location /api/users/ {
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' 'http://127.0.0.1:3000' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-CSRF-TOKEN' always;
+                add_header 'Access-Control-Allow-Credentials' 'true' always;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
             proxy_pass http://user_service/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -62,6 +72,15 @@ http {
 
         # Tweet service routes
         location /api/tweets/ {
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' 'http://127.0.0.1:3000' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-CSRF-TOKEN' always;
+                add_header 'Access-Control-Allow-Credentials' 'true' always;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
             proxy_pass http://tweet_service/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -71,6 +90,15 @@ http {
 
         # Notification service routes
         location /api/notifications/ {
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' 'http://127.0.0.1:3000' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-CSRF-TOKEN' always;
+                add_header 'Access-Control-Allow-Credentials' 'true' always;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
             proxy_pass http://notification_service/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -80,24 +108,20 @@ http {
 
         # Search service routes
         location /api/search/ {
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' 'http://127.0.0.1:3000' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-CSRF-TOKEN' always;
+                add_header 'Access-Control-Allow-Credentials' 'true' always;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
             proxy_pass http://search_service/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # JWT validation
-        location = /api/auth/validate {
-            internal;
-            proxy_pass http://user_service/auth/validate;
-            proxy_pass_request_body off;
-            proxy_set_header Content-Length "";
-            proxy_set_header X-Original-URI $request_uri;
-        }
-        location /api/ {
-            limit_req zone=api_limit burst=20 nodelay;
-            proxy_pass http://backend;
         }
     }
 }
