--- a/gateway/dockerfile
+++ b/gateway/dockerfile
@@ -1,5 +1,8 @@
 FROM nginx:alpine
 
+# Install curl for healthcheck
+RUN apk add --no-cache curl
+
 COPY nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 80
